fix: horizontal overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 	}
 
 	body {
-		@apply bg-background text-foreground cursor-default font-roboto;
+		@apply bg-background text-foreground cursor-default font-roboto overflow-x-hidden;
 	}
 
 	::-webkit-scrollbar {
